Fix small bugs and spelling errors. Finally added one line so it will auto-restart after NetSplit, Ping timeout, Etc.